opdracht 4 switch statement toegevoegd

--- a/home.html
+++ b/home.html
@@ -17,7 +17,8 @@
     <h2>opdracht 3</h2>
     <p id="berekenen"></p>
     <h2>opdracht 4</h2>
-    <p id="opdracht4"></p>
+    <p id="opdracht4if"></p>
+    <p id="opdracht4switch"></p>
   </body>
   <script src="scripts/opdracht1.js"></script>
   <script src="scripts/opdracht2.js"></script>
