--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
     <p id="opdracht4if"></p>
     <p id="opdracht4switch"></p>
   </body>
-  <script src="scripts/opdracht1.js"></script>
-  <script src="scripts/opdracht2.js"></script>
-  <script src="scripts/opdracht3.js"></script>
-  <script src="scripts/opdracht4.js"></script>
+  <script src="scripts/studieblok1/opdracht1.js"></script>
+  <script src="scripts/studieblok1/opdracht2.js"></script>
+  <script src="scripts/studieblok1/opdracht3.js"></script>
+  <script src="scripts/studieblok1/opdracht4.js"></script>
 </html>
