Opdracht 1 en 2 klaar

--- a/home.html
+++ b/home.html
@@ -19,9 +19,16 @@
     <h2>opdracht 4</h2>
     <p id="opdracht4if"></p>
     <p id="opdracht4switch"></p>
+    <h1>Studieblok 2</h1>
+    <h2>opdracht 1</h2>
+    <p id="huis"></p>
+    <h2>opdracht 2</h2>
+    <p id="zin"></p>
   </body>
   <script src="scripts/studieblok1/opdracht1.js"></script>
   <script src="scripts/studieblok1/opdracht2.js"></script>
   <script src="scripts/studieblok1/opdracht3.js"></script>
   <script src="scripts/studieblok1/opdracht4.js"></script>
+  <script src="scripts/studieblok2/opdracht1.js"></script>
+  <script src="scripts/studieblok2/opdracht2.js"></script>
 </html>
