--- a/home.html
+++ b/home.html
@@ -24,6 +24,8 @@
     <p id="huis"></p>
     <h2>opdracht 2</h2>
     <p id="zin"></p>
+    <h2>opdracht 3</h2>
+    <p id="charat"></p>
   </body>
   <script src="scripts/studieblok1/opdracht1.js"></script>
   <script src="scripts/studieblok1/opdracht2.js"></script>
@@ -31,4 +33,5 @@
   <script src="scripts/studieblok1/opdracht4.js"></script>
   <script src="scripts/studieblok2/opdracht1.js"></script>
   <script src="scripts/studieblok2/opdracht2.js"></script>
+  <script src="scripts/studieblok2/opdracht3.js"></script>
 </html>
