--- a/home.html
+++ b/home.html
@@ -26,6 +26,8 @@
     <p id="zin"></p>
     <h2>opdracht 3</h2>
     <p id="charat"></p>
+    <h2>opdracht 4</h2>
+    <p id="cijfer"></p>
   </body>
   <script src="scripts/studieblok1/opdracht1.js"></script>
   <script src="scripts/studieblok1/opdracht2.js"></script>
@@ -34,4 +36,5 @@
   <script src="scripts/studieblok2/opdracht1.js"></script>
   <script src="scripts/studieblok2/opdracht2.js"></script>
   <script src="scripts/studieblok2/opdracht3.js"></script>
+  <script src="scripts/studieblok2/opdracht4.js"></script>
 </html>
