--- a/home.html
+++ b/home.html
@@ -28,6 +28,9 @@
     <p id="charat"></p>
     <h2>opdracht 4</h2>
     <p id="cijfer"></p>
+    <h2>opdracht 5</h2>
+    <p id="array"></p>
+
   </body>
   <script src="scripts/studieblok1/opdracht1.js"></script>
   <script src="scripts/studieblok1/opdracht2.js"></script>
@@ -37,4 +40,5 @@
   <script src="scripts/studieblok2/opdracht2.js"></script>
   <script src="scripts/studieblok2/opdracht3.js"></script>
   <script src="scripts/studieblok2/opdracht4.js"></script>
+  <script src="scripts/studieblok2/opdracht5.js"></script>
 </html>
