--- a/studieblok1-2.html
+++ b/studieblok1-2.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Studieblok 1-2</title>
   </head>
   <body>
     <h1>Studieblok 1</h1>
