--- a/studieblok3-4.html
+++ b/studieblok3-4.html
@@ -9,6 +9,9 @@
     <h2>Opdracht 1</h2>
     <p id="naam"></p>
     <button type="button" name="button" onclick="naamWeergeven()">Naam</button>
+    <h2>Opdracht 2</h2>
+    <button type="button" name="bericht" onclick="Berichtje()">Berichtje</button>
   </body>
   <script src="scripts/studieblok3-4/opdracht1.js"></script>
+  <script src="scripts/studieblok3-4/opdracht2.js"></script>
 </html>
