--- a/studieblok3-4.html
+++ b/studieblok3-4.html
@@ -11,7 +11,10 @@
     <button type="button" name="button" onclick="naamWeergeven()">Naam</button>
     <h2>Opdracht 2</h2>
     <button type="button" name="bericht" onclick="Berichtje()">Berichtje</button>
+    <h2>Opdracht 3</h2>
+    <div style="width:90px;" id="opdracht3" onmousedown="Click()" onmouseenter="Schuin()" onmouseleave="Normaal()">Hello World</div>
   </body>
   <script src="scripts/studieblok3-4/opdracht1.js"></script>
   <script src="scripts/studieblok3-4/opdracht2.js"></script>
+  <script src="scripts/studieblok3-4/opdracht3.js"></script>
 </html>
