--- a/studieblok3-4.html
+++ b/studieblok3-4.html
@@ -13,8 +13,15 @@
     <button type="button" name="bericht" onclick="Berichtje()">Berichtje</button>
     <h2>Opdracht 3</h2>
     <div style="width:90px;" id="opdracht3" onmousedown="Click()" onmouseenter="Schuin()" onmouseleave="Normaal()">Hello World</div>
+    <h2>Opdracht 4</h2>
+    <div style="width:90px;" id="div1" onmousedown="Dikgedrukt(this)">Hello World</div>
+    <div style="width:90px;" id="div2" onmousedown="Dikgedrukt(this)">Hello World</div>
+    <div style="width:90px;" id="div3" onmousedown="Dikgedrukt(this)">Hello World</div>
+    <div style="width:90px;" id="div4" onmousedown="Dikgedrukt(this)">Hello World</div>
+    <div style="width:90px;" id="div5" onmousedown="Dikgedrukt(this)">Hello World</div>
   </body>
   <script src="scripts/studieblok3-4/opdracht1.js"></script>
   <script src="scripts/studieblok3-4/opdracht2.js"></script>
   <script src="scripts/studieblok3-4/opdracht3.js"></script>
+  <script src="scripts/studieblok3-4/opdracht4.js"></script>
 </html>
