--- a/studieblok3-4.html
+++ b/studieblok3-4.html
@@ -19,9 +19,12 @@
     <div style="width:90px;" id="div3" onmousedown="Dikgedrukt(this)">Hello World</div>
     <div style="width:90px;" id="div4" onmousedown="Dikgedrukt(this)">Hello World</div>
     <div style="width:90px;" id="div5" onmousedown="Dikgedrukt(this)">Hello World</div>
+    <h2>Opdracht 5</h2>
+    <p id="position" ></p>
   </body>
   <script src="scripts/studieblok3-4/opdracht1.js"></script>
   <script src="scripts/studieblok3-4/opdracht2.js"></script>
   <script src="scripts/studieblok3-4/opdracht3.js"></script>
   <script src="scripts/studieblok3-4/opdracht4.js"></script>
+  <script src="scripts/studieblok3-4/opdracht5.js"></script>
 </html>
