--- a/studieblok3-4.html
+++ b/studieblok3-4.html
@@ -21,10 +21,17 @@
     <div style="width:90px;" id="div5" onmousedown="Dikgedrukt(this)">Hello World</div>
     <h2>Opdracht 5</h2>
     <p id="position" ></p>
+    <h2>Opdracht 6</h2>
+    <form action="" method="post">
+      <input type="text" id="tijd" name="hoelang"></input>
+      <input type="button" name="button" value="wait" onclick="sleep()">
+    </form>
+    <p id="timesup"></p>
   </body>
   <script src="scripts/studieblok3-4/opdracht1.js"></script>
   <script src="scripts/studieblok3-4/opdracht2.js"></script>
   <script src="scripts/studieblok3-4/opdracht3.js"></script>
   <script src="scripts/studieblok3-4/opdracht4.js"></script>
   <script src="scripts/studieblok3-4/opdracht5.js"></script>
+  <script src="scripts/studieblok3-4/opdracht6.js"></script>
 </html>
