--- a/studieblok3-4.html
+++ b/studieblok3-4.html
@@ -24,9 +24,13 @@
     <h2>Opdracht 6</h2>
     <form action="" method="post">
       <input type="text" id="tijd" name="hoelang"></input>
-      <input type="button" name="button" value="wait" onclick="sleep()">
+      <input type="button" name="button" value="wait" onclick="sleep()"></input>
     </form>
     <p id="timesup"></p>
+    <h2>Opdracht 7</h2>
+    <p id="gegevens">Jeffrey Meijer</p>
+    <form method="post">
+      <input type="button" id="gegevensbutton" name="gegevensbutton" value="Geef details weer" onclick="ShowGegevens()"></input>
   </body>
   <script src="scripts/studieblok3-4/opdracht1.js"></script>
   <script src="scripts/studieblok3-4/opdracht2.js"></script>
@@ -34,4 +38,5 @@
   <script src="scripts/studieblok3-4/opdracht4.js"></script>
   <script src="scripts/studieblok3-4/opdracht5.js"></script>
   <script src="scripts/studieblok3-4/opdracht6.js"></script>
+  <script src="scripts/studieblok3-4/opdracht7.js"></script>
 </html>
