--- a/studieblok3-4.html
+++ b/studieblok3-4.html
@@ -31,6 +31,10 @@
     <p id="gegevens">Jeffrey Meijer</p>
     <form method="post">
       <input type="button" id="gegevensbutton" name="gegevensbutton" value="Geef details weer" onclick="ShowGegevens()"></input>
+    </form>
+    <h2>Opdracht 8</h2>
+    <div id="Klik" onmousedown="openprompt()">Klik hier</div>
+    <div id="opdracht8"></div>
   </body>
   <script src="scripts/studieblok3-4/opdracht1.js"></script>
   <script src="scripts/studieblok3-4/opdracht2.js"></script>
@@ -39,4 +43,5 @@
   <script src="scripts/studieblok3-4/opdracht5.js"></script>
   <script src="scripts/studieblok3-4/opdracht6.js"></script>
   <script src="scripts/studieblok3-4/opdracht7.js"></script>
+  <script src="scripts/studieblok3-4/opdracht8.js"></script>
 </html>
