--- a/studieblok5.html
+++ b/studieblok5.html
@@ -12,6 +12,9 @@
     <p id="email" onclick="email()">Email check</p>
     <p id="adres" onclick="adres()">Adres check</p>
     <p id="gender" onclick="gender()">Gender</p>
+    <h2>Opdracht 3</h2>
+    <p id="regexopdracht3"></p>
   </body>
   <script src="scripts/studieblok5/opdracht1-2.js"></script>
+  <script src="scripts/studieblok5/opdracht3.js"></script>
 </html>
