--- a/studieblok6.html
+++ b/studieblok6.html
@@ -20,6 +20,19 @@
     <button type="button" id="testing">Hide List items with class test</button><br/>
     <button type="button" id="color">Change List items color to blue</button>
     <button type="button" id="normal">Change List items color back to normal</button>
+    <h2>Opdracht 2</h2>
+    <div>
+    <div class="kleurAanpasbaar">
+      <li>PS4</li>
+      <li>PC</li>
+    </div>
+    <li>XBOXONE</li>
+    <li>SWITCH</li>
+    <li>MOBILE</li>
+    </div>
+    <button type="button" id="changecolor">Change color</button>
+    <button type="button" id="changeback">Change back</button>
   </body>
   <script src="scripts/studieblok6/opdracht1.js"></script>
+  <script src="scripts/studieblok6/opdracht2.js"></script>
 </html>
