--- a/studieblok6.html
+++ b/studieblok6.html
@@ -24,14 +24,19 @@
     <div>
     <div class="kleurAanpasbaar">
       <li>PS4</li>
-      <li>PC</li>
+      <li class="aanpasbaar">PC</li>
+      <li>PSVR</li>
+      <li class="aanpasbaar">Oculus rift</li>
+      <li class="aanpasbaar">HTC VIVE</li>
     </div>
     <li>XBOXONE</li>
     <li>SWITCH</li>
     <li>MOBILE</li>
     </div>
-    <button type="button" id="changecolor">Change color</button>
-    <button type="button" id="changeback">Change back</button>
+    <button type="button" id="changeclasscolor">Change color</button>
+    <button type="button" id="changeback">Change back</button><br/>
+    <button type="button" id="change2">Change aanpasbaar</button>
+    <button type="button" id="changeback2">Change aanpasbaar back</button>
   </body>
   <script src="scripts/studieblok6/opdracht1.js"></script>
   <script src="scripts/studieblok6/opdracht2.js"></script>
