--- a/studieblok6.html
+++ b/studieblok6.html
@@ -20,7 +20,7 @@
     <button type="button" id="testing">Hide List items with class test</button><br/>
     <button type="button" id="color">Change List items color to blue</button>
     <button type="button" id="normal">Change List items color back to normal</button>
-    <h2>Opdracht 2</h2>
+    <h2>Opdracht 2-3</h2>
     <div>
     <div class="kleurAanpasbaar">
       <li>PS4</li>
