HTML files naar pages verplaatst

--- a/pages/studieblok1-2.html
+++ b/pages/studieblok1-2.html
@@ -32,13 +32,13 @@
     <p id="array"></p>
 
   </body>
-  <script src="scripts/studieblok1/opdracht1.js"></script>
-  <script src="scripts/studieblok1/opdracht2.js"></script>
-  <script src="scripts/studieblok1/opdracht3.js"></script>
-  <script src="scripts/studieblok1/opdracht4.js"></script>
-  <script src="scripts/studieblok2/opdracht1.js"></script>
-  <script src="scripts/studieblok2/opdracht2.js"></script>
-  <script src="scripts/studieblok2/opdracht3.js"></script>
-  <script src="scripts/studieblok2/opdracht4.js"></script>
-  <script src="scripts/studieblok2/opdracht5.js"></script>
+  <script src="../scripts/studieblok1/opdracht1.js"></script>
+  <script src="../scripts/studieblok1/opdracht2.js"></script>
+  <script src="../scripts/studieblok1/opdracht3.js"></script>
+  <script src="../scripts/studieblok1/opdracht4.js"></script>
+  <script src="../scripts/studieblok2/opdracht1.js"></script>
+  <script src="../scripts/studieblok2/opdracht2.js"></script>
+  <script src="../scripts/studieblok2/opdracht3.js"></script>
+  <script src="../scripts/studieblok2/opdracht4.js"></script>
+  <script src="../scripts/studieblok2/opdracht5.js"></script>
 </html>
