--- a/pages/studieblok5.html
+++ b/pages/studieblok5.html
@@ -15,6 +15,6 @@
     <h2>Opdracht 3</h2>
     <p id="regexopdracht3"></p>
   </body>
-  <script src="scripts/studieblok5/opdracht1-2.js"></script>
-  <script src="scripts/studieblok5/opdracht3.js"></script>
+  <script src="../scripts/studieblok5/opdracht1-2.js"></script>
+  <script src="../scripts/studieblok5/opdracht3.js"></script>
 </html>
