--- a/pages/studieblok6.html
+++ b/pages/studieblok6.html
@@ -38,6 +38,6 @@
     <button type="button" id="change2">Change aanpasbaar</button>
     <button type="button" id="changeback2">Change aanpasbaar back</button>
   </body>
-  <script src="scripts/studieblok6/opdracht1.js"></script>
-  <script src="scripts/studieblok6/opdracht2.js"></script>
+  <script src="../scripts/studieblok6/opdracht1.js"></script>
+  <script src="../scripts/studieblok6/opdracht2-3.js"></script>
 </html>
