--- a/pages/Blokje.html
+++ b/pages/Blokje.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="./css/blokje.css"/>
+    <link rel="stylesheet" href=".././css/blokje.css"/>
     <meta charset="utf-8">
     <title>Opdracht 2 blokje</title>
   </head>
@@ -44,5 +44,5 @@
       </div>
     </div>
   </body>
-  <script src="scripts/tussenopdrachten/opdracht2.js"></script>
+  <script src="../scripts/tussenopdrachten/opdracht2.js"></script>
 </html>
