--- a/pages/boterkaas.html
+++ b/pages/boterkaas.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<link rel="stylesheet" href="./css/CSS.css"/>
+<link rel="stylesheet" href=".././css/CSS.css"/>
   <head>
     <meta charset="utf-8">
     <title>Boter kaas en eieren</title>
@@ -24,5 +24,5 @@
       </div>
     </div>
   </body>
-  <script src="scripts/tussenopdrachten/opdracht1.js"></script>
+  <script src="../scripts/tussenopdrachten/opdracht1.js"></script>
 </html>
