--- a/pages/studieblok3-4.html
+++ b/pages/studieblok3-4.html
@@ -36,12 +36,12 @@
     <div id="Klik" onmousedown="openprompt()">Klik hier</div>
     <div id="opdracht8"></div>
   </body>
-  <script src="scripts/studieblok3-4/opdracht1.js"></script>
-  <script src="scripts/studieblok3-4/opdracht2.js"></script>
-  <script src="scripts/studieblok3-4/opdracht3.js"></script>
-  <script src="scripts/studieblok3-4/opdracht4.js"></script>
-  <script src="scripts/studieblok3-4/opdracht5.js"></script>
-  <script src="scripts/studieblok3-4/opdracht6.js"></script>
-  <script src="scripts/studieblok3-4/opdracht7.js"></script>
-  <script src="scripts/studieblok3-4/opdracht8.js"></script>
+  <script src="../scripts/studieblok3-4/opdracht1.js"></script>
+  <script src="../scripts/studieblok3-4/opdracht2.js"></script>
+  <script src="../scripts/studieblok3-4/opdracht3.js"></script>
+  <script src="../scripts/studieblok3-4/opdracht4.js"></script>
+  <script src="../scripts/studieblok3-4/opdracht5.js"></script>
+  <script src="../scripts/studieblok3-4/opdracht6.js"></script>
+  <script src="../scripts/studieblok3-4/opdracht7.js"></script>
+  <script src="../scripts/studieblok3-4/opdracht8.js"></script>
 </html>
